--- a/EllypinCustomer/src/app/customer/customer.component.html
+++ b/EllypinCustomer/src/app/customer/customer.component.html
@@ -81,7 +81,7 @@
                       <tbody>
                         <tr>
                           <td>Transfer</td>
-                          <td>1</td>
+                          <td>{{transferFees}}</td>
                         </tr>
                         <tr>
                           <td>Redeem</td>
@@ -89,7 +89,7 @@
                         </tr>
                         <tr>
                           <td>Buy</td>
-                          <td>5</td>
+                          <td>{{buyFees}}</td>
                         </tr>
                         <tr>
                           <td></td>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-sm-4 asset-wrapper">
                   <h4>Asset Balance</h4>
-                  <div class="asset-inner"></div>
+                  <div class="asset-inner">{{assetBalance}}</div>
                 </div>
                 <div class="col-sm-4 podbal-wrapper">
                   <div class="table-responsive">
