--- a/EllypinCustomer/src/app/home/home.component.html
+++ b/EllypinCustomer/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 			<div class="row">
 				<div class="col-md-3 col-sm-5 col-xs-9">
 					<div class="logo-wrapper">
-						<a href="home.html">
+						<a href="javascript:void(0);">
 							<img src="assets/images/logo.png" alt="Ellypin">
 							<div class="logo-inner">
 								<h4>Ellypin</h4>
