--- a/EllypinCustomer/src/assets/css/style.css
+++ b/EllypinCustomer/src/assets/css/style.css
@@ -651,13 +651,19 @@ h4.demo-note {
 .redeem-section table thead tr th {
   text-align: center;
   text-transform: uppercase;
-  font-size: 20px;
-}
-
-.buy-section table thead tr th,
-.redeem-section table thead tr th{
   font-size: 16px;
   white-space: nowrap;
+}
+
+.buy-section table tbody tr td,
+.redeem-section table tbody tr td{
+  white-space: nowrap;
+}
+
+.buy-section table tbody tr td input,
+.redeem-section table tbody tr td input{
+  height: auto;
+  padding:0; 
 }
 
 .buy-section table thead,
