--- a/EllypinCustomer/src/app/sidebar/sidebar.component.html
+++ b/EllypinCustomer/src/app/sidebar/sidebar.component.html
@@ -15,11 +15,11 @@
               <div class="left-menu-wrapper">
                 <nav class="navbar">
                   <ul class="nav navbar-nav">
-                    <li><a routerLink="/home" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
-                    <li><a routerLink="/common/pod" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Pod</a></li>
-                    <li><a routerLink="/common/pom" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Pom</a></li>
-                    <li><a style="pointer-events: none" routerLink="/common/customer" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Faq</a></li>
-                    <li><a >Contact</a></li>
+                    <li><a routerLink="/" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
+                    <li><a routerLink="/services/pod" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Pod</a></li>
+                    <li><a routerLink="/services/pom" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Pom</a></li>
+                    <li><a routerLink='/faq'>Faq</a></li>
+                    <li><a routerLink='/contact'>Contact</a></li>
                   </ul>
                 </nav>
               </div>
