--- a/EllypinCustomer/src/app/home/home.component.html
+++ b/EllypinCustomer/src/app/home/home.component.html
@@ -19,11 +19,11 @@
 					<div class="menu-wrapper">
 						<nav>
 							<ul>
-								<li><a href="javascript:void(0);">About</a></li>
-								<li><a href="javascript:void(0);">Products</a></li>
-								<li><a href="javascript:void(0);">Faq</a></li>
-								<li><a href="javascript:void(0);">Whitepaper</a></li>
-								<li><a href="javascript:void(0);">Contact</a></li>
+								<li><a href="javascript:void(0);" routerLink='/about'>About</a></li>
+								<li><a href="javascript:void(0);" routerLink='/product'>Products</a></li>
+								<li><a href="javascript:void(0);" routerLink='faq'>Faq</a></li>
+								<li><a href="javascript:void(0);" routerLink='whitepaper'>Whitepaper</a></li>
+								<li><a href="javascript:void(0);" routerLink='/contact'>Contact</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -37,7 +37,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="banner-link-wrapper">
-						<a routerLink="/common/pod">
+						<a routerLink="/services/pod">
 							<h2>Fiat Currency <br> Pod</h2>
 						</a>
 						<p>Payment-On-Delivery</p>
@@ -45,7 +45,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="banner-link-wrapper">
-						<a routerLink="/common/pom">
+						<a routerLink="/services/pom">
 							<h2>Bond And CDs <br> Pom</h2>
 						</a>
 						<p>Payment-On-Maturity</p>
