--- a/EllypinCustomer/src/app/pod/pod.component.html
+++ b/EllypinCustomer/src/app/pod/pod.component.html
@@ -28,7 +28,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr *ngFor="let item of podArray" routerLink="/common/customer">
+                      <tr *ngFor="let item of podArray" routerLink="/services/customer">
                           <td>{{item.description}}</td>
                           <td>{{item.symbol}}</td>
                           <td>{{item.custodian}}/{{item.location}}</td>
