--- a/EllypinCustomer/src/app/custodian/custodian.component.html
+++ b/EllypinCustomer/src/app/custodian/custodian.component.html
@@ -153,19 +153,19 @@
                     <tbody>
                       <tr>
                         <td>Total</td>
-                        <td>{{userBalance}}</td>
+                        <td>{{totalSupply}}</td>
                       </tr>
                       <tr>
                         <td>Burned</td>
-                        <td></td>
+                        <td>{{totalBurn}}</td>
                       </tr>
                       <tr>
                         <td>Redeemed</td>
-                        <td></td>
+                        <td>{{totalRedeem}}</td>
                       </tr>
                       <tr>
                         <td>Net</td>
-                        <td></td>
+                        <td>{{netToken}}</td>
                       </tr>
                     </tbody>
                   </table>
