--- a/EllypinCustomer/src/app/custodian/custodian.component.html
+++ b/EllypinCustomer/src/app/custodian/custodian.component.html
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="bottom-link-wrapper">
-              <a href="javascript:void(0);">Fee Schedule</a>
+              <a data-toggle="modal" data-target="#buy-custodian">Fee Schedule</a>
               <a href="javascript:void(0);">Terms and Condition</a>
               <a href="javascript:void(0);">MyEtherScan</a>
             </div>
@@ -359,6 +359,84 @@
               <div class="form-group">
                 <label>Password</label>
                 <input type="password" name="usr-pass" [formControl]="password" class="form-control">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-submit">
+                <button type="submit" class="btn btn-success btn-lg" [disabled]="loginForm.invalid" (click)="loginSubmit()" >Submit</button>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="buy-custodian" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <form action="" [formGroup]="loginForm">
+          <h3>Serial Number:  <span>123456789</span></h3>
+          <div *ngIf="error">
+            <div  class="alert alert-danger">
+              {{error}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-group">
+                <label>Amount Received &nbsp;&nbsp;</label>
+                <input type="text" class="form-control">
+              </div>
+            </div>
+            <div class="col-sm-12">
+              <div class="form-group">
+                <label>Update Account Balance &nbsp;&nbsp;</label>
+                <input type="text" class="form-control">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-submit">
+                <button type="submit" class="btn btn-success btn-lg" [disabled]="loginForm.invalid" (click)="loginSubmit()" >Submit</button>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="buy-custodian" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <form action="" [formGroup]="loginForm">
+          <h3>Serial Number:  <span>123456789</span></h3>
+          <div *ngIf="error">
+            <div  class="alert alert-danger">
+              {{error}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-group">
+                <label>Amount Received &nbsp;&nbsp;</label>
+                <input type="text" class="form-control">
+              </div>
+            </div>
+            <div class="col-sm-12">
+              <div class="form-group">
+                <label>Update Account Balance &nbsp;&nbsp;</label>
+                <input type="text" class="form-control">
               </div>
             </div>
           </div>
