--- a/EllypinCustomer/src/assets/css/style.css
+++ b/EllypinCustomer/src/assets/css/style.css
@@ -561,6 +561,10 @@ h4.demo-note {
   background: #fff;
 }
 
+ul.ngx-pagination{
+  margin-bottom: 0px;
+}
+
 /*======================= Custodian Css Start here =============================*/
 
 .button-inner ul {
