--- a/EllypinCustomer/src/app/admin/admin.component.html
+++ b/EllypinCustomer/src/app/admin/admin.component.html
@@ -116,15 +116,15 @@
                     <tbody>
                         <tr>
                           <td>Transfer</td>
-                          <td><span class="col-sm-3"><input type="number" [(ngModel)]="transferFees" class="form-control"></span><span class="col-sm-8"><button class="btn btn-primary btn-sm" (click)="setTransferFees()">Transfer Fees</button></span></td>
+                          <td><span class="col-sm-3"><input type="text" [(ngModel)]="transferFees" class="form-control"></span><span class="col-sm-8"><button class="btn btn-primary btn-sm" (click)="setTransferFees()">Transfer Fees</button></span></td>
                         </tr>
                         <tr>
                           <td>Redeem</td>
-                          <td><span class="col-sm-3"><input type="number" [(ngModel)]="fees" class="form-control"></span><span class="col-sm-8"><button class="btn btn-primary btn-sm" (click)="setRedeemFees()">Redeem Fees</button></span></td>
+                          <td><span class="col-sm-3"><input type="text" [(ngModel)]="fees" class="form-control"></span><span class="col-sm-8"><button class="btn btn-primary btn-sm" (click)="setRedeemFees()">Redeem Fees</button></span></td>
                         </tr>
                         <tr>
                           <td>Buy</td>
-                          <td><span class="col-sm-3"><input type="number" [(ngModel)]="buyFees" class="form-control"></span><span class="col-sm-8"><button class="btn btn-primary btn-sm" (click)="setBuyFees()">Buy Fees</button></span></td>
+                          <td><span class="col-sm-3"><input type="text" [(ngModel)]="buyFees" class="form-control"></span><span class="col-sm-8"><button class="btn btn-primary btn-sm" (click)="setBuyFees()">Buy Fees</button></span></td>
                         </tr>
                       </tbody>
                   </table>
