--- a/EllypinCustomer/src/app/admin/admin.component.html
+++ b/EllypinCustomer/src/app/admin/admin.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="button-inner">
       <ul>
-        <li><a href="#">Admin Ui</a></li>
+        <li><a (click)="tempMint()">Admin Ui</a></li>
         <li><a href="#">Home</a></li>
       </ul>
     </div>
