--- a/EllypinCustomer/src/app/admin/admin.component.html
+++ b/EllypinCustomer/src/app/admin/admin.component.html
@@ -102,7 +102,7 @@
             <div class="bottom-link-wrapper">
               <a href="javascript:void(0);" data-toggle="modal" data-target="#approve-kyc">Fee Schedule</a>
               <a href="javascript:void(0);">Terms and Condition</a>
-              <a href="javascript:void(0);">MyEtherScan</a>
+              <a href="https://ropsten.etherscan.io/address/0x44128f17132ae9aac62ce8a47c0cf5465e225c97" target="_blank">MyEtherScan</a>
             </div>
             <div class="clearfix">
               <div class="col-sm-4 fees-wrapper">
