--- a/EllypinCustomer/src/app/customer/customer.component.html
+++ b/EllypinCustomer/src/app/customer/customer.component.html
@@ -66,7 +66,7 @@
               <div class="bottom-link-wrapper">
                 <a >Fee Schedule</a>
                 <a routerLink='/terms'>Terms and Condition</a>
-                <a (click)="toMyetherScan()" style="cursor: pointer">MyEtherScan</a>
+                <a href="https://ropsten.etherscan.io/address/0x44128f17132ae9aac62ce8a47c0cf5465e225c97" target="_blank" style="cursor: pointer">MyEtherScan</a>
               </div>
 
               <div class="clearfix">
